--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -1780,7 +1780,7 @@ ul.icons {
 
 /* Wrapper */
 .wrapper {
-  padding: 8rem 0 6rem 0 ;
+  padding: 8rem .1 6rem 0 ;
   position: relative;
   z-index: 1; }
   @media screen and (max-width: 1280px) {
